--- a/phantasyRestClient/config/client.ini
+++ b/phantasyRestClient/config/client.ini
@@ -1,8 +1,11 @@
 [default]
-use = heroku
+use = frib
 
 [heroku]
 bind = https://phantasy-rest.herokuapp.com
+
+[frib]
+bind = https://phantasy-rest.frib.msu.edu
 
 [local]
 bind = http://127.0.0.1:8080
